Cover owner-defaults wildcard boundaries